fixed layout issues - found by test embed

--- a/6005specs.css
+++ b/6005specs.css
@@ -21,14 +21,14 @@
 }
 
 .specs .vennDiagrams {
-    height: 450px;
-    width: 400px;
+    height: 400px;
+    width: 450px;
 }
 
 .specs .checkDisplay {
     text-align: center;
     position: relative;
-    top: -600px;
+    top: -550px;
     height: 150px;
     width: 450px;
 }
@@ -71,14 +71,14 @@
     height: 550px;
     width: 349px;
     position: relative;
-    top: -450px;
+    top: -400px;
     left: 450px;
     background-color: #f5f5f5;
 }
 
 .specs pre {
     border-radius: 0;
-    width: 305;
+    width: 305px;
     padding: 5px 25px 5px 10px;
     margin: 0;
     border-width: 1px 1px 1px 10px;
